[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "tokenlog"
authors = [
    { name = "vkehfdl1", email = "vkehfdl1@gmail.com" }
]
description = 'Simplest token log system for your LLM, embedding model calls.'
readme = "README.md"
requires-python = ">=3.8"
keywords = ['LLM', 'logging', 'log', 'embedding', 'OpenAI', 'Huggingface', 'Token']
license = { file = "LICENSE" }
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
urls = { Homepage = "https://github.com/vkehfdl1/tokenlog" }
dynamic = ["version", "dependencies"]

[tool.setuptools.dynamic]
version = { file = ["tokenlog/VERSION"] }
dependencies = { file = ["requirements.txt"] }

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["tokenlog*"]
exclude = ["tests"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]
